fix(vertical-filmstrip): different label animations for filmstrip states
Instead of one timing for sliding the video status label left and right,
have different timings depending on the filmstrip state. To facilitate
triggering the different animations, add more classes to the labels
that need to move that specify the filmstrip state.

- Faster transition if focusing on self-view with videos present so
  the label does not overlap videos transitioning from 0 opacity.
- Transition delay when de-focusing on self-view with videos present
  so videos have time to go away before the label moves over them.
- Maintain no movement if there are no videos, regardless of
  filmstrip toggle state.
- Different delays for when the filmstrip is being toggled visible
  and hidden if there are remote videos visible.

--- a/css/_vertical_filmstrip_overrides.scss
+++ b/css/_vertical_filmstrip_overrides.scss
@@ -92,9 +92,9 @@
      * the filmstrip itself or filmstrip remote videos appear and disappear.
      */
     .video-state-indicator.moveToCorner {
-        transition: right 2s;
+        transition: right 0.5s;
 
-        &.with-filmstrip {
+        &.with-filmstrip.with-remote-videos {
             &#recordingLabel {
                 right: 200px;
             }
@@ -102,6 +102,20 @@
             &#videoResolutionLabel {
                 right: 150px;
             }
+        }
+
+        &.with-filmstrip.without-remote-videos {
+            transition-delay: 0.5s;
+        }
+
+        &.with-filmstrip.with-remote-videos.opening {
+            transition: 0.9s;
+            transition-timing-function: ease-in-out;
+        }
+
+        &.without-filmstrip {
+            transition: 1.2s ease-in-out;
+            transition-delay: 0.1s;
         }
     }
 
